# certificate-generator

./: .gitignore  README.md  pyproject.toml
cert_generator/: main.py  send_mail.py
